tests/semantic/fail/assign2stringLiteral.c
int main(void) {
  "fail" = "if this works";
  return 0;
}
